# deeprag

./: .gitignore  BCM-RAG-Design.md  CLAUDE.md  Dockerfile  MEMORY.md  PROGRESS.md  README.md  chatbot.py  config.py  magic-pdf.json  main.py  pyproject.toml  railway.json  run_pipeline.py  run_pipeline_v2.py  run_pipeline_v3.py  run_pipeline_vlm.py
.github/workflows/: publish.yml
agent/: __init__.py  agentic_rag.py  agentic_rag_v2.py  answer_synthesizer.py  api.py  core.py  dag_agent.py
api/: __init__.py  main.py
content_analysis/: __init__.py  api.py  chunk_builder.py  chunk_optimizer.py  entity_extractor.py  kg_enricher.py  kg_exporter.py  local_vlm.py  models.py  pipeline.py  rule_extractor.py  section_tree.py  state_machine.py  table_analyzer.py  vector_exporter.py  vlm_analyzer.py
deeprag/: __init__.py
docs/: BCM-RAG-Architecture-v2.md  ROADMAP.md  parser-module-analysis.md  parsing-layer-design.md
docs/schema/: 01-neo4j-schema.md  02-qdrant-collection-schema.md  03-document-tree-schema.md  04-chunk-schema.md  05-metadata-schema.md  06-entity-schema.md  07-relationship-schema.md
domain/: __init__.py  config.py  loader.py
domain/presets/: __init__.py  bcm.py  generic.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  main.ts  style.css
hybrid_parser/: __init__.py  html_table_parser.py  image_linker.py  merger.py  table_injector.py
llm/: __init__.py  base.py  config.py  factory.py  openai_compat.py  types.py
memory/: bcm-rag-project-status.md  optimization-roadmap-2026-06-22.md  progress-2026-06-18.md  retrieval-optimization-2026-06-18.md
parser/: __init__.py  api.py  base.py  docling_parser.py  fallback.py  mineru_parser.py  models.py
retrieval/: __init__.py  api.py  context_compressor.py  dense_retriever.py  embedder.py  enhanced_reasoning.py  eval.py  evidence_builder.py  graph_retriever.py  graph_store.py  llm_answer.py  llm_fusion.py  neo4j_config.py  pipeline.py  qdrant_config.py  query_rewriter.py  reasoning_engine.py  reranker.py  vector_retriever.py  vector_store.py  vlm_enhancer.py
scripts/: complete_pipeline.py  download_bge_m3.ps1  download_models.ps1  download_models.py  download_models_light.py  download_reranker.ps1  import_to_neo4j.py  import_to_qdrant.py  interactive_dag.py  parse_datasets.py  run_benchmark.py  run_full_pipeline.py
tests/: benchmark_questions.json  benchmark_runner.py  eval_reasoning.py  eval_router.py  golden_queries.json  reasoning_ground_truth.json  router_eval.json  test_answer_synthesizer.py  test_context_compressor.py  test_dag_agent.py  test_evidence_builder.py  test_llm_fusion.py  test_pipeline.py  test_query_rewriter.py
tests/test_hybrid_parser/: test_html_table_parser.py  test_merger.py
