[project]
name = "deeprag"
version = "0.3.0"
description = "DeepRAG: Domain-Adaptable Enterprise RAG Framework with Graph+Vector Hybrid Retrieval"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "DeepRAG Contributors"},
]
keywords = ["rag", "graphrag", "knowledge-graph", "document-retrieval", "llm", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    # Parsing
    "magic-pdf>=1.3.12",
    "beautifulsoup4>=4.12",
    # Retrieval
    "numpy>=2.0",
    "networkx>=3.0",
    "sentence-transformers>=4.0",
    # LLM
    "openai>=2.0",
    "httpx>=0.28",
    # API
    "fastapi>=0.137",
    "uvicorn>=0.49",
    # Runtime databases (optional — memory backends used if not installed)
    "neo4j>=5.0",
    "qdrant-client>=1.0",
]

[project.optional-dependencies]
docling = ["docling>=2.0"]
mineru = ["magic-pdf>=1.3.12"]
qdrant = ["qdrant-client>=1.0"]
neo4j = ["neo4j>=5.0"]
all = ["deeprag[docling,mineru,qdrant,neo4j]"]

[project.scripts]
deeprag-server = "api.main:main"
deeprag-chat = "chatbot:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm*", "domain*", "parser*", "content_analysis*", "retrieval*", "agent*", "api*", "deeprag*"]
